--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: <your-registry/your-image>:<tag>
+          image: nginx
           ports:
             - name: http
               containerPort: 8080
