--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: nginx
+          image: nginx:1.26
           ports:
             - name: http
               containerPort: 8080
